<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ftfl.icare.IcareHomeActivity"
    android:orientation="vertical" >

    <TextView 
	    android:id="@+id/addDietChart"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center"	    
	    android:textColor="@android:color/holo_blue_dark"
	    android:padding="5dp"
	    android:layout_margin="5dp"
	    android:textSize="20sp"
	    android:text="@string/createDietChart"/>
    
    <ScrollView 
	    android:id="@+id/scrollView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"    	
	        android:orientation="vertical" >
	    
	    <TextView 
		    android:id="@+id/myfeastName"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"	     
		    android:textColor="@android:color/holo_blue_dark"
		    android:layout_margin="5dp"
		    android:textSize="14sp"
		    android:text="@string/myfeastName"/>
    
    	<EditText
		    android:id="@+id/editDailyDietChartFeast"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:hint="@string/myfeastName"
		    android:inputType="text" 
		    android:textColor="#ffffff">
		    <requestFocus />
	    
		</EditText>
		
    	<TextView 
		    android:id="@+id/myfeastManu"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"	     
		    android:textColor="@android:color/holo_blue_dark"
		    android:layout_margin="5dp"
		    android:textSize="14sp"
		    android:text="@string/myfeastManu"/>
    
    	<EditText
		    android:id="@+id/editDailyDietChartManu"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:ems="10"
		    android:hint="@string/myfeastManu"
		    android:inputType="text" 
		    android:textColor="#ffffff">

		</EditText>
		
    	<TextView
	        android:id="@+id/dateOfDiet"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/dateOfDiet"
	        android:textColor="@android:color/holo_blue_dark" />

	    <EditText
	        android:id="@+id/editTextDP"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:calendarViewShown="true"
	        android:inputType="none"
	        android:focusable="true"/>
	    
	    <TextView
	        android:id="@+id/timeOfDiet"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/timeOfDiet"
	        android:textColor="@android:color/holo_blue_dark" />
        
        <EditText
	        android:id="@+id/tpDailyDietChart"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
        
        <CheckBox
	        android:id="@+id/diet_alarm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/holo_blue_dark"
	        android:text="@string/alarm" />
		
    </LinearLayout>
    
  </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_dark" />

</LinearLayout>
