<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/scrollView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/layoutOne"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/viewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="start"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/food"/>

        <TextView
            android:id="@+id/viewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/time"/>

        <ImageView
            android:id="@+id/imageAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/alarm" 
            android:contentDescription="@string/image"/>
        
    </LinearLayout>
    
    <LinearLayout
	    android:id="@+id/layoutTwo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	        
            <TextView
	            android:id="@+id/viewManu"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/holo_blue_dark"
	            android:text="@string/manu"/>
	        
            
	</LinearLayout>
 
</LinearLayout>

</ScrollView>    
