<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ftfl.icare.IcareHomeActivity"
    android:orientation="vertical" >

    <TextView 
	    android:id="@+id/myDietChart"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center"	    
	    android:textColor="@android:color/holo_blue_dark"
	    android:padding="5dp"
	    android:layout_margin="5dp"
	    android:textSize="20sp"
	    android:text="@string/myProfile"/>
    
    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <TextView 
	    android:id="@+id/myTodayDietChartView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center"	    
	    android:textColor="@android:color/holo_blue_dark"
	    android:padding="5dp"
	    android:layout_margin="5dp"
	    android:textSize="14sp"
	    android:text="@string/todayDiet"/>
    
    <ListView
	    android:id="@+id/lvTodayDietChart"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#ffffff"/>
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutTwo"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
    <TextView 
	    android:id="@+id/tvUpComingDietChartView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center"	    
	    android:textColor="@android:color/holo_blue_dark"
	    android:padding="5dp"
	    android:layout_margin="5dp"
	    android:textSize="14sp"
	    android:text="@string/upComingDiet"/>
    
    <ListView
	    android:id="@+id/lvUpComingDietChart"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#ffffff"/>
    
    </LinearLayout>
    
    

</LinearLayout>
